2018-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppCNPy-package.Rd: Add that 32bit integer and 64bit floats
	are the key types, and casting may be needed from other width.

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch Travis CI to R 3.5 repo

2018-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.10

	* README.md: Also mention reticulate and vignette

	* src/RcppExports.cpp: Added autogenerated file
	* src/init.c: Removed, content in src/RcppExports.cpp

2018-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rmd: Updated, now with collapse option
	* vignettes/UsingReticulate.Rmd: Idem

	* vignettes/RcppCNPy.bib: New file to allow pandoc version 2.* use

	* .travis.yml: Also install r-cran-reticulate

2018-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.9

2018-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/UsingReticulate.Rmd: New vignette showing how to use the
	reticulate package (and vignette results 'fixed' to not add dependency)

2018-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp (npySave): Operate on bool from R; default to TRUE
	* R/utils.R (.checkPath): Now just returns the dir.exists() result

	* man/RcppCNPy-package.Rd: Updated documentation for new argument

2018-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp (npySave): Add new option to check directory
	and path before attempting to save

	* R/utils.R (.checkPath): New helper function to check if a
	directory contained in a path exists

2018-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.8

	* vignettes/RcppCNPy-intro.Rmd: Set knitr chunk option
	'python.reticulate=FALSE' to avoid vignette dependency

2017-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.7

	* cleanup: Expanded cleanup
